errors.err
ex12.c:309:1: error: expected identifier or ‘(’ before ‘{’ token
 {
 ^
ex12.c:331:1: error: expected identifier or ‘(’ before ‘{’ token
 {
 ^
ex12.c:372:1: error: expected identifier or ‘(’ before ‘{’ token
 {
 ^
